Commit pour le nul

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <!-- SALUT JULIEN TU ES MAGNIFIQUE JE T'AIME  -->
+    <!-- AHAH T TROP NUL PFF TU VEUX QUON SBAGARRE ? AHAH TU TIENS PAS UNE SECONDE LOOOOL  -->
 </body>
 </html>
